assignment-kubernetes/assignment-5/manifestfile-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-a
  namespace: pod-nginx-1
  labels:
    app: nginx-a
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
