assignment-kubernetes/assignment-5/manifestfile.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-b
  namespace: pod-nginx-2
  labels:
    app: nginx-b
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
