assignment-kubernetes/assignment-5/manifest.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: efs-dynamic-pod
  labels:
    project: efs-dynamic
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: efs-dynamic
          mountPath: usr/share/nginx/html
  volumes:
    - name: efs-dynamic
      persistentVolumeClaim:
        claimName: efs-dynamic-claim
---
apiVersion: v1
kind: Service
metadata:
  name: efs-dynmaic-service
spec:
  type: LoadBalancer
  selector:
    project: efs-dynamic
  ports:
    - name: node-port-svc
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30003
