assignment-kubernetes/assignment-5/deny-taffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-traffic
  namespace: pod-nginx-2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
